[package]
name = "zat"
version = "0.1.0"
edition = "2021"
authors = ["Luca Cominardi <luca.cominardi@zettascale.tech>"]
license = "EPL-2.0"
categories = ["network-programming"]
description = "zat: a netcat alternative for zenoh"
repository = "https://github.com/Mallets/zat"

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
serde_json = "1.0.133"
zenoh = { version = "1.0.3", features = ["unstable"] }
