[package]
name = "zcat"
version = "0.4.1"
edition = "2021"
authors = ["Luca Cominardi <luca.cominardi@zettascale.tech>"]
license = "EPL-2.0"
categories = ["network-programming"]
description = "zcat: a netcat alternative for zenoh"
repository = "https://github.com/Mallets/zcat"

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
serde_json = "1.0.133"
zenoh = { version = "1.0.3", features = ["unstable"] }

[[bin]]
name = "zat"
path = "src/main.rs"
