[package]
name = "zcat"
version = "0.4.3"
edition = "2021"
authors = ["Luca Cominardi"]
license = "EPL-2.0"
categories = ["network-programming"]
description = "zcat: a netcat-inspired utility for zenoh"
repository = "https://github.com/Mallets/zcat"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.5.22", features = ["derive", "help"] }
serde_json = "1.0.133"
zenoh = { version = "1.2.1", features = ["unstable"] }

[[bin]]
name = "zat"
path = "src/main.rs"
